--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<app-header></app-header>
+
+<div id="container">
+  <app-sidebar></app-sidebar>
+  <div id="content">
+    <router-outlet></router-outlet>
+  </div>
+</div>
+<app-footer></app-footer>
